<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background_color"
	tools:context=".ParksActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<HorizontalScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:scrollbars="horizontal">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/card_margin"
					app:cardCornerRadius="@dimen/card_margin">

					<ImageView
						android:id="@+id/tour_image1"
						android:layout_width="@dimen/listitem_image_width"
						android:layout_height="@dimen/listitem_image_height"
						android:scaleType="centerCrop" />


				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/card_margin"
					app:cardCornerRadius="@dimen/card_margin">

					<ImageView
						android:id="@+id/tour_image2"
						android:layout_width="@dimen/listitem_image_width"
						android:layout_height="@dimen/listitem_image_height"
						android:scaleType="centerCrop" />


				</androidx.cardview.widget.CardView>



			</LinearLayout>

		</HorizontalScrollView>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">


			<TextView
				android:id="@+id/name_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/card_margin"
				android:textColor="@android:color/black"
				android:textSize="@dimen/name_text_size" />


			<TextView
				android:id="@+id/category_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/card_margin"
				android:textColor="@android:color/black"
				android:textSize="@dimen/summary_text_size" />


		</LinearLayout>

		<androidx.cardview.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/listitem_card_margin"
			app:cardCornerRadius="@dimen/card_margin">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/icon_background_color"
				android:orientation="horizontal">


				<LinearLayout
					android:id="@+id/location_icon"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/card_margin"
					android:layout_weight="1"
					android:gravity="center_horizontal"
					android:orientation="vertical">

					<ImageView
						android:layout_width="@dimen/icon_width"
						android:layout_height="@dimen/icon_width"
						android:scaleType="centerCrop"
						android:src="@drawable/ic_my_location_black_24dp" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/location"
						android:textSize="@dimen/contact_text_size" />
				</LinearLayout>


				<LinearLayout
					android:id="@+id/call_icon"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/card_margin"
					android:layout_weight="1"
					android:gravity="center_horizontal"
					android:orientation="vertical">

					<ImageView
						android:layout_width="@dimen/icon_width"
						android:layout_height="@dimen/icon_width"
						android:scaleType="centerCrop"
						android:src="@drawable/ic_call_black_24dp" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/call"
						android:textSize="@dimen/contact_text_size" />
				</LinearLayout>


			</LinearLayout>

		</androidx.cardview.widget.CardView>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="@dimen/card_margin"
			android:layout_marginBottom="@dimen/card_margin">

			<TextView
				android:id="@+id/time"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/time_open" />

			<TextView
				android:id="@+id/time_opened_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_toEndOf="@id/time"
				android:textSize="@dimen/time_text_size" />

			<TextView
				android:id="@+id/contact"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/time_opened_text"
				android:layout_margin="@dimen/contact_text_margin"
				android:text="@string/contact" />

			<TextView
				android:id="@+id/contact_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/time_opened_text"
				android:layout_toEndOf="@id/contact"
				android:textSize="@dimen/contact_text_size" />
		</RelativeLayout>

		<TextView
			android:id="@+id/summary_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/card_margin"
			android:textSize="@dimen/summary_text_size" />


	</LinearLayout>


</ScrollView>