<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background_color"
	android:orientation="vertical">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:id="@+id/container_for_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/card_margin"
				android:text="Ho"
				android:textColor="@android:color/black"
				android:textSize="@dimen/name_text_size" />


			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/card_margin"
				android:text="@string/history_about_ho"
				android:textColor="@android:color/black"
				android:textSize="@dimen/summary_text_size" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/card_margin"
				android:text="@string/ho_summary"
				android:textSize="@dimen/contact_text_size" />

		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/photos_margin_top"
			android:orientation="vertical"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/container_for_text">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/some_photos_of_ho"
				android:textColor="@android:color/black"
				android:textSize="20sp" />

			<HorizontalScrollView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:scrollbars="horizontal">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

					<androidx.cardview.widget.CardView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/card_margin"
						app:cardCornerRadius="@dimen/card_margin">

						<ImageView
							android:id="@+id/ho_image1"
							android:layout_width="@dimen/home_image_width"
							android:layout_height="@dimen/home_image_height"
							android:scaleType="centerCrop"
							android:src="@drawable/ho_image1" />

					</androidx.cardview.widget.CardView>


					<androidx.cardview.widget.CardView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/card_margin"
						app:cardCornerRadius="@dimen/card_margin">

						<ImageView
							android:id="@+id/ho_image2"
							android:layout_width="@dimen/home_image_width"
							android:layout_height="@dimen/home_image_height"
							android:scaleType="centerCrop"
							android:src="@drawable/ho_image2" />

					</androidx.cardview.widget.CardView>


					<androidx.cardview.widget.CardView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/card_margin"
						app:cardCornerRadius="@dimen/card_margin">

						<ImageView
							android:id="@+id/ho_image3"
							android:layout_width="@dimen/home_image_width"
							android:layout_height="@dimen/home_image_height"
							android:scaleType="centerCrop"
							android:src="@drawable/ho_image3" />

					</androidx.cardview.widget.CardView>


					<androidx.cardview.widget.CardView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/card_margin"
						app:cardCornerRadius="@dimen/card_margin">

						<ImageView
							android:id="@+id/ho_image4"
							android:layout_width="@dimen/home_image_width"
							android:layout_height="@dimen/home_image_height"
							android:scaleType="centerCrop"
							android:src="@drawable/ho_image4" />

					</androidx.cardview.widget.CardView>


					<androidx.cardview.widget.CardView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/card_margin"
						app:cardCornerRadius="@dimen/card_margin">

						<ImageView
							android:id="@+id/ho_image5"
							android:layout_width="@dimen/home_image_width"
							android:layout_height="@dimen/home_image_height"
							android:scaleType="centerCrop"
							android:src="@drawable/ho_image5" />

					</androidx.cardview.widget.CardView>



				</LinearLayout>


			</HorizontalScrollView>

		</LinearLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>